--- a/jquery6/index.html
+++ b/jquery6/index.html
@@ -147,8 +147,8 @@
 	</div>
 
   <script type = "text/javascript" src="libs/jquery.js"></script>
-
-  <script  type = "text/javascript"  src="js/blog.js"></script>
+  <script src="js/blog.js"></script>
+  
 <!--
 <script src="js/hoverClass.js"></script>
 <script src="js/navigation.js"></script>
