--- a/jquery-special1/final.html
+++ b/jquery-special1/final.html
@@ -202,7 +202,7 @@ This is footer
 	
 	
 	
-	<script src="jquery-1.3.2.js" type="text/javascript" charset="utf-8"></script>	
+	<script src="http://code.jquery.com/jquery-latest.js"></script>	
 	<script src="jquery.dcjqaccordion.2.9.js" type="text/javascript" charset="utf-8"></script>
         <script src="jquery.cookie.js" type="text/javascript" charset="utf-8"></script>
          <script src="set_state.js" type="text/javascript" charset="utf-8"></script>
